<resources>
    <string name="app_name">koselig</string>
    <string name="song_title_search">Song Title</string>
    <string name="song_artist_search">Song Artist</string>
    <string name="search">Search</string>
    <string name="promptMsg">Please enter a song title and artist to view lyrics.</string>
    <string name="no_connection">No internet connection; cannot be translated.</string>
    <string name="lyric_error">The lyrics could not be found or do not exist in the database</string>
    <string name="language">Language:</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
</resources>
